--- a/Coffee Shop Registration/Views/Home/Index.cshtml
+++ b/Coffee Shop Registration/Views/Home/Index.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
+<p>
+    <a href="/Product">Products!</a>
+</p>
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <a href ="Home/Registration">Login here! :)</a>
