--- a/Coffee Shop Registration/Views/Product/DetailView.cshtml
+++ b/Coffee Shop Registration/Views/Product/DetailView.cshtml
@@ -1,49 +1,17 @@
-﻿@model Coffee_Shop_Registration.Models.Product
+﻿@model Products
 
 @{
     ViewData["Title"] = "DetailView";
-    Layout = "DetailView.cshtml";
+   // Layout = "DetailView.cshtml";
 }
 
-<h1>DetailView</h1>
+<h1>Here is the details of the product</h1>
 
 <div>
-    <h4>Product</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Category)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Category)
-        </dd>
-    </dl>
-</div>
-<div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+    @{
+    <p>@Model.Name</p>
+    <p>@Model.Id</p>
+    <p>@Model.Price</p>
+    <p>@Model.Category</p>
+    }
 </div>
